# hounslow_bin_collection

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_INVESTIGATION.md  API_TEST_RESULTS.txt  CHANGELOG.md  CLAUDE.md  Dockerfile  FINAL_API_ANALYSIS.md  HACS_CORRECTION_SUMMARY.md  HACS_FIX_ANALYSIS.md  MODERNIZATION_COMPLETE.md  Makefile  POETRY_SETUP_SUMMARY.md  README.md  SESSION_COMPLETION_SUMMARY.md  analyze_tokens.py  bin_lookup.py  bin_schedule.py  debug_address_tab.py  debug_browser.py  debug_iframe.py  demo_enhanced.py  demo_env_vars.py  demo_final.py  docker-compose.yaml  enhanced_address_matching.py  entrypoint.sh  fixed_hounslow_gov_uk.py  fixed_hounslow_gov_uk_clean.py  hounslow-bins  hounslow_gov_uk_hacs_fixed.py  pyproject.toml  pyproject.toml.backup  resume.md  schedule.py  supervisord.conf  sync_versions.py  test_address_matching.py  (+9 more)
.claude/: settings.local.json
.dev-scripts/: format.sh  run.sh  test.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  deploy.yml  docker-publish.yml  local-consistency.yml  publish-docker.yml  release.yml  security.yml  version-bump.yml
assets/: dashboard.html
config/: config.yaml  config.yaml.example
docs/: ADDRESS_CONFIGURATION_COMPLETE.md  COLLECTION_DATE_NOTICE.md  ENHANCED_MATCHING_COMPLETE.md  README.md  UPRN_CLARIFICATION.md  examples.md
ha_cards/: README.md  hounslow_advanced_unified_card.yaml  hounslow_bins_food_waste_card.yaml  hounslow_bins_garden_waste_card.yaml  hounslow_bins_general_waste_card.yaml  hounslow_bins_main_card.yaml  hounslow_bins_popup_card.yaml  hounslow_bins_recycling_card.yaml  hounslow_bins_status_card.yaml  hounslow_bins_summary_card.yaml  hounslow_next_collection_card.yaml  hounslow_unified_sensor_card.yaml  unified_sensor_template.yaml
scripts/: sync_versions.py
src/hounslow_bin_collection/: __init__.py  __main__.py  browser_collector.py  collector.py  config.py  enhanced_extractor.py  models.py  version.py
src/hounslow_bin_collection/integrations/: __init__.py  calendar.py  mqtt.py  web_server.py
tests/: README.md  conftest.py  test_browser_collector.py  test_cli_and_validation.py  test_cli_integration.py  test_enhanced_extractor.py  test_error_handling.py  test_hounslow_bin_collection.py  test_models.py
unraid-template/: HounslowBinCollectionCalendar.xml
