[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hounslow_bin_collection"
version = "0.1.0"
description = "Grab bin collection dates from the Hounslow Council website and make them available via MQTT and ICS for Home Assistant or elsewhere"
authors = ["ronschaeffer <ron@ronschaeffer.com>"]
readme = "README.md"
license = "MIT"
keywords = ["python", "hounslow", "bin-collection", "home-assistant", "mqtt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "hounslow_bin_collection", from = "src"}]

[tool.poetry.urls]
Homepage = "https://github.com/ronschaeffer/hounslow_bin_collection"
Repository = "https://github.com/ronschaeffer/hounslow_bin_collection.git"
Issues = "https://github.com/ronschaeffer/hounslow_bin_collection/issues"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
requests = "^2.31.0"
ics = "^0.7.2"
paho-mqtt = "^1.6.1"
beautifulsoup4 = "^4.13.4"
playwright = "^1.54.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12"
pytest = "^8.0"
pytest-cov = "^4.0"
pre-commit = "^4.2.0"

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "UP007", # Use X | Y for union types (Python 3.10+)
    "UP038", # Use X | Y for isinstance checks (Python 3.10+)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=hounslow_bin_collection",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with -m \"not slow\")",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
