[project]
name = "hounslow-bin-collection"
version = "0.1.0"
description = "Grab bin collection dates from the Hounslow Council website and make them available via MQTT and ICS for Home Assistant or elsewhere"
authors = [
    { name = "ronschaeffer", email = "ron@ronschaeffer.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "ics>=0.7.2",
    "paho-mqtt>=2.1.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.54.0",
    "ha-mqtt-publisher>=0.3.5",
]

[project.scripts]
hounslow-bins = "hounslow_bin_collection.__main__:main"

[project.urls]
Homepage = "https://github.com/ronschaeffer/hounslow_bin_collection"
Repository = "https://github.com/ronschaeffer/hounslow_bin_collection.git"
Issues = "https://github.com/ronschaeffer/hounslow_bin_collection/issues"

[tool.poetry]
packages = [
    { include = "hounslow_bin_collection", from = "src" },
    { include = "tests", format = "sdist" },
]
package-mode = true

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
requests = "^2.33.1"
ics = ">=0.7.2"
paho-mqtt = "^2.1.0"
beautifulsoup4 = "^4.12.0"
playwright = ">=1.54.0"
ha-mqtt-publisher = "^0.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^7.0"
pre-commit = "^4.3.0"
ruff = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration - Home Assistant compatible
[tool.ruff]
target-version = "py311"
line-length = 88
required-version = ">=0.12.0"

[tool.ruff.lint]
select = [
    "A001",   # Variable {name} is shadowing a Python builtin
    "B002",   # Python does not support the unary prefix increment
    "B005",   # Using .strip() with multi-character strings is misleading
    "B007",   # Loop control variable {name} not used within loop body
    "B009",   # Do not call getattr with a constant attribute value
    "B014",   # Exception handler with duplicate exception
    "B015",   # Pointless comparison. Did you mean to assign a value?
    "B017",   # pytest.raises(BaseException) should be considered evil
    "B018",   # Found useless attribute access
    "B023",   # Function definition does not bind loop variable {name}
    "B026",   # Star-arg unpacking after a keyword argument is strongly discouraged
    "B032",   # Possible unintentional type annotation (using :)
    "B904",   # Use raise from to specify exception cause
    "B905",   # zip() without an explicit strict= parameter
    "C4",     # flake8-comprehensions
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "F541",   # f-string without any placeholders
    "G004",   # logging-f-string (no f-strings in logging)
    "I",      # isort
    "N804",   # First argument of a class method should be named cls
    "N805",   # First argument of a method should be named self
    "N815",   # Variable {name} in class scope should not be mixedCase
    "PT",     # flake8-pytest-style
    "RUF",    # ruff-specific rules
    "S102",   # Use of exec detected
    "S103",   # bad-file-permissions
    "S307",   # suspicious-eval-usage
    "SIM102", # Use a single if statement instead of nested if statements
    "SIM103", # Return the condition directly
    "SIM108", # Use ternary operator instead of if-else-block
    "SIM117", # multiple-with-statements
    "TRY300", # try-consider-else
    "UP",     # pyupgrade
    "UP031",  # Use format specifiers instead of percent format
    "UP032",  # Use f-string instead of `format` call
    "W",      # pycodestyle warnings
]

ignore = [
    "C901",     # complex-structure (too strict for this project)
    "E501",     # line too long (handled by formatter)
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments to function call
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value used in comparison
    "S101",     # Use of assert (normal in tests)
    "S104",     # hardcoded-bind-all-interfaces
    "S105",     # hardcoded-password-string (test passwords are OK)
    "S110",     # try-except-pass
    "S607",     # start-process-with-partial-path
    "PT009",    # pytest-unittest-assertion
    "PT011",    # pytest.raises({exception}) is too broad
    "PT017",    # pytest-assert-in-except
    "PT018",    # Assertion should be broken down into multiple parts
    "SIM117",   # multiple-with-statements (can be clearer sometimes)
    "TRY003",   # Avoid specifying long messages outside the exception class
    "TRY300",   # try-consider-else
    "TRY400",   # Use logging.exception instead of logging.error
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.codespell]
ignore-words-list = "nd,st,rd,th"
skip = "*.json,*.pyc,__pycache__,*.git"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=hounslow_bin_collection",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with -m \"not slow\")",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
